test/trivial/deitz/test_scope2.good
test_scope2.chpl:5: In function 'bar':
test_scope2.chpl:6: error: 'foo' used before defined (first used here)
